# botlib

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
actions/: bot.py  my_keyboard.py  wait_time.py
botlib/: botlib.py
docs/: index.md
docs/api/: bot.md
tests/: test_bot.py
